# LinuxVideo

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: capture-read.rs  capture-stream.rs  control.rs  drain-read.rs  drain-stream.rs  drain.rs  info.rs  list.rs  output-stream.rs  output-write.rs  output.rs  save-jpeg.rs  save-png.rs  uvc-xu.rs  uvc.rs  write.rs
src/: buf_type.rs  controls.rs  error.rs  format.rs  lib.rs  macros.rs  pixel_format.rs  pixelformat.rs  raw.rs  shared.rs  stream.rs  uvc.rs
src/raw/: controls.rs
src/uvc/: raw.rs
