[package]
name = "linuxvideo"
version = "0.3.2"
edition = "2021"
license = "0BSD"
description = "V4L2 video capture and output library"
repository = "https://github.com/SludgePhD/LinuxVideo.git"
keywords = ["linux", "video", "webcam"]

[dependencies]
log = "0.4.14"
nix = "0.26.1"
bitflags = "1.2.1"

[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false }
itertools = "0.10.3"
anyhow = "1.0.68"
